Wed Jul 21 23:18:51 CEST 2004 (tk)
----------------------------------
  * configure: test for gethostbyname_r

Wed Jul 21 20:45:49 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: enhance UPX skew detection (aCaB)
  * configure: fix milter test on Solaris 9 (problem reported by
	       Fletcher Mattox <fletcher*cs.utexas.edu>)

Wed Jul 21 18:46:36 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Add a note about using sendmail -d0 to see if
	sendmail has been built with MILTER support
		Add sanity check to clamfi_connect()

Wed Jul 21 16:47:06 BST 2004 (trog)
-----------------------------------
  * libclamav/chmunpack.c: use fclose() to flush data

Wed Jul 21 04:14:34 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: fix debug message

Tue Jul 20 17:05:38 BST 2004 (trog)
-----------------------------------
  * libclamav/chmunpack.c: remove the uncompressed temp file
		before scanning

Tue Jul 20 16:18:13 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Code tidy - remove overlapping strcpy

Tue Jul 20 15:38:03 BST 2004 (njh)
----------------------------------
  * libclamav:	Some MyDoom.I were getting through

Tue Jul 20 03:26:38 CEST 2004 (tk)
----------------------------------
  * libclamav: integrate CHM decoder from Trog

Mon Jul 19 21:24:18 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: fix memory leak (Martin Blapp <mb*imp.ch>)

Mon Jul 19 19:46:03 CEST 2004 (tk)
----------------------------------
  * libclamav: use new, faster and memory efficient algorithm (multipattern
	       variant of Boyer-Moore) for static signature matching (not
	       yet fully optimised)
  * libclamav: API: cl_build, cl_free succeed cl_buildtrie, cl_freetrie
	       (old functions still supported)
  * all: minor cleanup; fix compilation warnings

Fri Jul 16 17:32:40 CEST 2004 (tk)
----------------------------------