@@ -1,3 +1,8 @@
+Wed Jul 21 22:23:58 BST 2004 (njh)
+----------------------------------
+  * clamav-milter:	Add mutex around gethostbyname
+
+
 Wed Jul 21 23:18:51 CEST 2004 (tk)
 ----------------------------------
   * configure: test for gethostbyname_r
